--- a/project/visionos/incorporating-real-world-surroundings-in-an-immersive-experience.yml
+++ b/project/visionos/incorporating-real-world-surroundings-in-an-immersive-experience.yml
@@ -1,51 +1,51 @@
 - 内容: 'Incorporating real-world surroundings in an immersive experience'
   提示: ''
-  翻译: ''
+  翻译: '在沉浸式体验中融入真实世界的环境'
 - 内容: 'Create an immersive experience by making your app’s content respond to the local shape of the world.'
   提示: ''
-  翻译: ''
+  翻译: '让你的应用内容与当地环境的地形相呼应，从而创造身临其境的体验。'
 - 内容: 'Overview'
   提示: ''
-  翻译: ''
+  翻译: '概述'
 - 内容: 'Scene reconstruction helps bridge the gap between the rendered 3D content in your app and the person’s surroundings. Use scene reconstruction in ARKit to give your app an idea of the shape of the person’s surroundings and to bring your app experience into their world. Immersive experiences — those that use the mixed space style — are best positioned to incorporate this kind of contextual information: scene reconstruction is only available in spaces and isn’t as relevant for the full space style.'
   提示: ''
-  翻译: ''
+  翻译: '场景重建可帮助缩小应用中渲染的三维内容与用户周围环境之间的差距。在 ARKit 中使用场景重建可让你的应用了解用户周围环境的形状，并将你的应用体验带入用户的世界。沉浸式体验--那些使用 mixed 空间样式的体验--最适合用于整合这类上下文信息：场景重建只在空间中可用，且不适用于 full 空间样式。'
 - 内容: 'In addition to providing a 3D mesh of the shape of different nearby objects, ARKit gives a classification to each mesh face it detects. For example, it might classify a face of a mesh as being part of an appliance, a piece of furniture, or structural information about the room like the position of walls and floors. The following video shows virtual cubes colliding with the scene reconstruction mesh, which makes the cubes appear to land on a table:'
   提示: ''
-  翻译: ''
+  翻译: '除了提供附近不同物体形状的三维网格外，ARKit 还会对检测到的每个网格面进行分类。例如，它可能会将网格面分类为电器、家具或房间结构信息（如墙壁和地板的位置）的一部分。下面的视频展示了虚拟立方体与场景重建网格的碰撞，这使得立方体看起来像落在了桌子上：'
 - 内容: 'Configure a scene reconstruction session'
   提示: ''
-  翻译: ''
+  翻译: '配置场景重建会话'
 - 内容: 'Scene reconstruction requires the ARKitSession.AuthorizationType.worldSensing authorization type and corresponding usage description that you supply in your app’s Info.plist file. The following starts a session and processes updates as ARKit refines its reconstruction of the person’s surroundings:'
   提示: ''
-  翻译: ''
+  翻译: '场景重建需要 ARKitSession.AuthorizationType.worldSensing 授权类型和相应的使用说明，你可以在应用的 Info.plist 文件中提供这些信息。以下代码会启动一个会话，并随着 ARKit 完善用户周围环境重建不断处理更新：'
 - 内容: 'Add real-world interactivity using collision components'
   提示: ''
-  翻译: ''
+  翻译: '使用碰撞组件添加与真实世界的交互性'
 - 内容: 'You can make rendered 3D content more lifelike by having it appear to interact physically with objects in the person’s surroundings, like furniture and floors. Use RealityKit’s collision components and physics support to provide these interactions in your app. The generateStaticMesh(from:) method bridges between scene reconstruction and RealityKit’s physics simulation.'
   提示: ''
-  翻译: ''
+  翻译: '你可以让渲染的三维内容与用户周围的物体（如家具和地板）进行物理交互，从而使其更加逼真。使用 RealityKit 的碰撞组件和物理支持在应用中提供这些交互。generateStaticMesh(from:) 方法是场景重建和 RealityKit 物理模拟之间的桥梁。'
 - 内容: 'Warning'
   提示: ''
-  翻译: ''
+  翻译: '警告'
 - 内容: 'Be mindful of how much content you include in immersive scenes that use the mixed style. Content that fills a significant portion of the screen, even if that content is partially transparent, can prevent the person from seeing potential hazards in their surroundings. If you want to immerse the person in your content, configure your space with the full style. For more information, see Creating fully immersive experiences in your app.'
   提示: ''
-  翻译: ''
+  翻译: '请注意在使用 mixed 样式的沉浸式场景中包含内容的多少。占屏幕很多空间的内容，即使它们部分透明，也仍会影响用户认知周围环境中的潜在危险。如果你想让用户沉浸在你的内容中，请使用 full 样式配置你的空间。如需了解更多信息，请参阅在应用中构建完全沉浸式的体验。'
 - 内容: 'Use low-priority tasks to generate meshes, because generating them is a computationally expensive operation. The following creates a mesh entity with collision shapes using scene reconstruction:'
   提示: ''
-  翻译: ''
+  翻译: '考虑使用低优先级任务生成网格，因为生成网格的计算成本很高。下面代码使用场景重建生成具有碰撞形状的网格实体：'
 - 内容: 'Note'
   提示: ''
-  翻译: ''
+  翻译: '备注'
 - 内容: 'Scene reconstruction meshes only support the PhysicsBodyMode.static physics body component mode.'
   提示: ''
-  翻译: ''
+  翻译: '场景重建网格仅支持 PhysicsBodyMode.static 物理实体组件模式。'
 - 内容: 'Each object in the scene reconstruction mesh updates its originFromAnchorTransform information independently and requires a separate static mesh because ARKit subdivides its representation of the world into multiple, distinct sections.'
   提示: ''
-  翻译: ''
+  翻译: '场景重建网格中的每个物体都会独立更新其 originFromAnchorTransform 信息，并且需要一个单独的静态网格，因为 ARKit 将其世界表现细分为多个不同的部分。'
 - 内容: 'Display scene reconstruction meshes during debugging'
   提示: ''
-  翻译: ''
+  翻译: '在调试过程中显示场景重建网格'
 - 内容: 'People using an app that leverages scene reconstruction typically don’t need to see a visual rendering of the scene reconstruction mesh. The system already shows passthrough video in an immersive experience. However, temporarily displaying the scene reconstruction mesh can help while you’re developing and debugging your app. In Xcode’s debugging toolbar, click the Enable Visualizations button and select Collision Shapes. Because each element of the scene reconstruction mesh has a collision component, the details of the mesh appear in the debug visualization. For more information, see Diagnosing issues in the appearance of a running app.'
-  提示: ''
-  翻译: ''
+  提示: 'passthrough video 此处译为“穿透视频”，猜测指的是用户处于完全沉浸式体验时仍然能透过环境看到周围人或物的功能。'
+  翻译: '用户在使用运用了场景重建的应用时，通常不需要看到场景重建网格的可视化渲染。系统已经在沉浸式体验中显示了穿透视频。不过，在开发和调试应用时，临时显示场景重建网格会有所帮助。在 Xcode 的调试工具栏中，单击“启用可视化（Enable Visualizations）”按钮并选择“碰撞形状（Collision Shapes）”。由于场景重建网格的每个元素都有一个碰撞组件，因此网格的细节会显示在可视化调试中。有关更多信息，请参阅诊断运行中应用的外观问题。'
