--- a/project/visionos/capturing-video-from-your-visionos-device.yml
+++ b/project/visionos/capturing-video-from-your-visionos-device.yml
@@ -1,81 +1,96 @@
 - 内容: 'Capturing video from Apple Vision Pro for 2D viewing'
   提示: ''
-  翻译: ''
+  翻译: '从 Apple Vision Pro 捕获屏幕截图和视频用于 2D 观看'
 - 内容: 'Record high-quality video of your visionOS app and its surroundings for app previews.'
   提示: ''
-  翻译: ''
+  翻译: '为 visionOS 应用及其周围环境创建屏幕截图并录制高质量视频，以便进行应用预览。'
 - 内容: 'Overview'
   提示: ''
-  翻译: ''
+  翻译: '概述'
 - 内容: 'Use short videos and screenshots of your visionOS app to showcase your user interface, highlight functionality, and demonstrate usage. Help people understand what to expect from an immersive experience by recording content from the device that includes your app and its surroundings.'
   提示: ''
-  翻译: ''
+  翻译: '使用 visionOS 应用的截图和视频短片来展示用户界面、突出功能和演示使用方法。通过录制 Apple Vision Pro 中的内容（包括你的应用及其周围环境），帮助人们了解沉浸式体验的预期效果。'
 - 内容: 'The system renders content with spacial effects and optimizations for viewing during immersive experiences. To produce high-resolution content for people to view on 2D displays, the system needs to render without these effects and drop some optimizations. Use Developer Capture in Reality Composer Pro to notify the system to reconfigure rendering, and capture up to 60 seconds of high-resolution video, including sound, from Apple Vision Pro.'
   提示: ''
-  翻译: ''
-- 内容: 'Pair your Apple Vision Pro to Xcode'
-  提示: ''
-  翻译: ''
-- 内容: 'Before capturing video from your device, pair it to a Mac that has Xcode and the visionOS SDK installed. For instructions on pairing your device, see Running your app in Simulator or on a device.'
-  提示: ''
-  翻译: ''
-- 内容: 'Prepare to capture your app and its surroundings'
-  提示: ''
-  翻译: ''
-- 内容: 'Select a well-lit location that is free from clutter. Avoid including objects that might get in the way of your app‘s windows and 3D content or distract the audience. Include enough detail in the scene to provide context and anchoring points. Consider your surroundings and avoid material that you don’t have permission to capture. This can include people, screens, branded products, logos, artwork, and other intellectual property.'
-  提示: ''
-  翻译: ''
-- 内容: 'Use the version of your app that you intend to share with your audience. Build and install your app using a release configuration. This configuration enables code optimizations for better runtime performance and disables the generation of debugging information. Debug configurations typically disable code optimizations and might include UI you donʼt intend to share. Don’t use them to record video for previews you intend to share. Build schemes manage the build configuration Xcode uses during build actions, for more information see Customizing the build schemes for a project.'
-  提示: ''
-  翻译: ''
-- 内容: 'Plan the tasks you intend to capture ahead of time and keep them short and focused. Launch the app and get the app into the state you need before you begin the capture. Reduce unnecessary processing overhead on the visionOS device by quiting other apps and avoiding background tasks.'
-  提示: ''
-  翻译: ''
-- 内容: 'Record your capture'
-  提示: ''
-  翻译: ''
-- 内容: 'To begin capturing video from the device:'
-  提示: ''
-  翻译: ''
-- 内容: 'Launch Reality Composer Pro. Choose Open Developer Tool > Reality Composer Pro from the Xcode menu.'
-  提示: ''
-  翻译: ''
-- 内容: 'Choose File > Developer Capture to bring up the Developer Capture dialog.'
-  提示: ''
-  翻译: ''
-- 内容: 'Select the device to capture from the pop-up menu.'
-  提示: ''
-  翻译: ''
-- 内容: 'If you see the message “Preparing, wait for the device to be ready”. You can click the info button that appears to the right of the popup menu for more information.'
-  提示: ''
-  翻译: ''
-- 内容: 'Click the record button to begin the countdown timer.'
-  提示: ''
-  翻译: ''
-- 内容: 'Clicking the record button starts a countdown. When the countdown reaches 0, the capture session begins. As the capture process happens, the video changes because the system reconfigures to render content for viewing in 2D. You might notice reduced responsiveness from the device during the session as it devotes more processing to render and capture the video.'
-  提示: ''
-  翻译: ''
-- 内容: 'Perform the interactions you want to record on the device. Keep relevant content centered and in frame. The aspect ratio of the video you capture crops content that appears at the sides of an experience. Keep your head stable, and use slow, steady movement to transition the focus of the device when necessary. Small movements get amplified and might be jarring to the audience.'
-  提示: ''
-  翻译: ''
-- 内容: 'Click the record button again from your Mac to end the capture session. The session ends on its own if the elapsed time exceeds 60 seconds.'
-  提示: ''
-  翻译: ''
+  翻译: '系统渲染的内容具有空间效果，并针对沉浸式体验中的观看效果进行了优化。在正常操作过程中提高渲染性能的技术，如降低周边图像质量的视点渲染技术，并不能很好地转化为 2D 显示。要制作供用户能在 2D 显示屏上观看的高分辨率内容，系统需要在没有这些效果的情况下进行渲染，并放弃一些优化。使用 Reality Composer Pro 中的 Developer Capture 来通知系统重新配置渲染，并从 Apple Vision Pro 截取屏幕截图或长达 60 秒的高分辨率视频（包括声音）。'
 - 内容: 'Note'
   提示: ''
-  翻译: ''
+  翻译: '注意'
+- 内容: 'For guidance on the screenshots and previews you include in your app’s product page, see Submit your apps to the App Store for Apple Vision Pro.'
+  提示: ''
+  翻译: '有关在应用的产品页面中包含截图和预览的指导，请参阅向 Apple Vision Pro 的 App Store 提交应用。'
+- 内容: 'Pair your Apple Vision Pro to Xcode'
+  提示: ''
+  翻译: '将 Apple Vision Pro 与 Xcode 配对'
+- 内容: 'Before capturing video from your device, pair it to a Mac that has Xcode and the visionOS SDK installed. For instructions on pairing your device, see Running your app in Simulator or on a device.'
+  提示: ''
+  翻译: '在从设备截取屏幕截图和视频之前，请将设备与安装了 Xcode 和 visionOS SDK 的 Mac 配对。有关配对设备的说明，请参阅在模拟器或设备上运行应用。'
+- 内容: 'Prepare to capture your app and its surroundings'
+  提示: ''
+  翻译: '准备捕获应用及其周围环境'
+- 内容: 'Select a well-lit location that is free from clutter. Avoid including objects that might get in the way of your app‘s windows and 3D content or distract the audience. Include enough detail in the scene to provide context and anchoring points. Consider your surroundings and avoid material that you don’t have permission to capture. This can include people, screens, branded products, logos, artwork, and other intellectual property.'
+  提示: ''
+  翻译: '选择一个光线充足、没有杂物的位置。避免放置可能会分散用户注意力或妨碍应用窗口和三维内容的物体。在场景中包含足够的细节，以提供背景上下文和锚点。避免使用未获取拍摄许可的素材，包括人物、屏幕、品牌产品、徽标、艺术品和其他知识产权。'
+- 内容: 'Use the version of your app that you intend to share with your audience. Build and install your app using a release configuration. This configuration enables code optimizations for better runtime performance and disables the generation of debugging information. Debug configurations typically disable code optimizations and might include UI you donʼt intend to share. Don’t use them to record video for previews you intend to share. Build schemes manage the build configuration Xcode uses during build actions, for more information see Customizing the build schemes for a project.'
+  提示: ''
+  翻译: '使用你打算与用户分享的应用版本。使用发布配置构建和安装应用。该配置启用了代码优化以提高运行时性能，并禁止生成调试信息。调试配置通常会禁用代码优化，并可能包含你不打算分享的用户界面。请勿使用它们为你准备共享的预览录制视频。构建方案管理着 Xcode 在构建操作中使用的构建配置，更多信息请参阅自定义项目的构建方案。'
+- 内容: 'Plan the tasks you intend to capture ahead of time and keep them short and focused. Launch the app and get the app into the state you need before you begin the capture. Reduce unnecessary processing overhead on the visionOS device by quiting other apps and avoiding background tasks.'
+  提示: ''
+  翻译: '提前规划你打算捕获的任务，并保持它们简短而集中。启动你的应用，进入你计划开始捕捉的状态。通过退出其他应用和避免后台任务，减少 Apple Vision Pro 上不必要的处理开销。'
+- 内容: 'To capture screenshots or video from a device, select your device from the capture dialog in Reality Composer Pro:'
+  提示: ''
+  翻译: '要从设备上截取屏幕截图或视频，请从 Reality Composer Pro 的截取对话框中选择设备：'
+- 内容: 'Launch Reality Composer Pro. Choose Open Developer Tool > Reality Composer Pro from the Xcode menu.'
+  提示: ''
+  翻译: '启动 Reality Composer Pro。从 Xcode 菜单中选择 Open Developer Tool > Reality Composer Pro。'
+- 内容: 'Choose File > Developer Capture to bring up the Developer Capture dialog.'
+  提示: ''
+  翻译: '选择 File > Developer Capture 以弹出 Developer Capture 对话框。'
+- 内容: 'Select the device to capture from the pop-up menu.'
+  提示: ''
+  翻译: '从弹出菜单中选择要捕获的设备。'
+- 内容: 'If you see the message “Preparing, wait for the device to be ready”. You can click the info button that appears to the right of the popup menu for more information.'
+  提示: ''
+  翻译: '如果看到“准备就绪，请等待设备准备就绪”的信息，你可以点击弹出菜单右侧的信息按钮以获取更多信息。'
+- 内容: 'Capture screenshots'
+  提示: ''
+  翻译: '捕获屏幕截图'
+- 内容: 'To begin capturing screenshots from Apple Vision Pro, click the button with the still camera icon in the capture dialog. The system begins your capture session:'
+  提示: ''
+  翻译: '要开始捕捉 Apple Vision Pro 的屏幕截图，请单击对话框中带有静态相机图标的按钮。然后系统就会开始截屏会话：'
+- 内容: 'To capture a screenshot immediately, without a countdown, press the spacebar. Click the countdown button to capture a screenshot after a 3 second countdown. Continue to keep relevant content centered and in frame for screenshots. The aspect ratio of screenshots crops content that appears at the sides of an experience.'
+  提示: ''
+  翻译: '要不显示倒计时而立即截取屏幕截图，请按空格键。点击倒计时按钮可在 3 秒倒计时后截取屏幕截图。截屏时，继续保持相关内容居中并在画面内。屏幕截图的宽高比会裁剪出现在体验两侧的内容。'
+- 内容: 'The status area of the capture dialog displays the time remaining before the system ends the capture session. Click the stop button from your Mac to end the capture session yourself.'
+  提示: ''
+  翻译: '截屏对话框的状态区域会显示系统结束截图会话前的剩余时间。点击 Mac 上的停止按钮以手动结束截图会话。'
+- 内容: 'Capture video'
+  提示: ''
+  翻译: '捕获视频'
+- 内容: 'To begin capturing video from the device, click the video camera button in the Developer Capture dialog. This begins a countdown. When the countdown reaches 0, the capture session begins. As the capture process happens, the video changes because the system reconfigures to render content for viewing in 2D. You might notice reduced responsiveness from the device during the session as it devotes more processing to render and capture the video.'
+  提示: ''
+  翻译: '要开始从设备捕获视频，请单击 Developer Capture 对话框中的摄像机按钮。这将开始倒计时。倒计时到 0 时，捕捉会话开始。在捕捉过程中，视频会发生变化，因为系统会重新配置渲染内容以供 2D 查看。在会话过程中，你可能会发现设备的响应速度有所下降，因为它需要更多的处理能力来呈现和捕捉视频。'
+- 内容: 'While recording on the device, perform your planned interactions. Keep relevant content centered and in frame. The aspect ratio of the video you capture crops content that appears at the sides of an experience. Keep your head stable, and use slow, steady movement to transition the focus of the device when necessary. When viewing the video you capture in 2D, small head movements appear amplified and might be jarring to the audience.'
+  提示: ''
+  翻译: '在设备上录制时，执行你计划好的互动。保持相关内容居中并在画面中。你所拍摄视频的宽高比会影响体验过程中出现在两侧的内容。保持头部稳定，必要时使用缓慢、稳定的动作来转换设备的焦点。在观看 2D 捕捉的视频时，头部的细微动作会被放大，可能会让观众感到不适。'
+- 内容: 'The capture session ends when the elapsed time exceeds 60 seconds. You can click the record button again from your Mac to end the session sooner.'
+  提示: ''
+  翻译: '当拍摄时间超过 60 秒时，拍摄会话就会结束。你可以在 Mac 上再次点击录制按钮以提前结束会话。'
+- 内容: 'Note'
+  提示: ''
+  翻译: '注意'
 - 内容: 'To begin a capture, the device must have a stable connection to your Mac and start at low power and thermal levels to stay below thresholds necessary to achieve consistent frame rates. When capturing multiple sessions, you might need to wait between each session.'
   提示: ''
-  翻译: ''
+  翻译: '要开始捕捉，设备必须与 Mac 保持稳定连接，并以低功率和低热量水平启动，以保持低于实现一致帧频所需的阈值。捕捉多个会话时，可能需要在每个会话之间等待。'
 - 内容: 'Review the captured video file'
   提示: ''
-  翻译: ''
+  翻译: '查看捕获的视频文件'
 - 内容: 'Each recording session creates a QuickTime Movie file (.mov) and saves it to the desktop of your Mac. The file includes video captured at 30 FPS using 10-bit HEVC in HDTV Rec. 709 color space with system audio recorded in 32-bit floating-point linear PCM.'
   提示: ''
-  翻译: ''
+  翻译: '每个录制会话都会创建一个 QuickTime Movie 文件（.mov），并将其保存到 Mac 的桌面上。该文件包括使用 HDTV Rec. 709 色彩空间中的 10 位 HEVC 以 30 FPS 捕获的视频，以及使用 32 位浮点线性 PCM 录制的系统音频。'
 - 内容: 'Review the video to make sure that it includes all the content you planned and it doesn’t include any unexpected elements. Ensure that the transitions and animations are smooth and frame rates are consistent.'
   提示: ''
-  翻译: ''
+  翻译: '查看视频，确保它包含你计划的所有内容，并且不包含任何意外元素。确保转场和动画流畅，帧频一致。'
 - 内容: 'You might want to use additional video-editing tools to trim, edit, and apply post-processing, such as stabilization, to the video to create a high-quality preview. Select frames from the video you capture to use as screenshots.'
   提示: ''
-  翻译: ''
+  翻译: '使用其他视频编辑工具对视频进行修剪、编辑和后期处理（如防抖动），以创建高质量的预览。'
