feat：完成 60 的 md & yml

--- a/project/visionos/configuring-your-app-icon.yml
+++ b/project/visionos/configuring-your-app-icon.yml
@@ -1,168 +1,186 @@
 - 内容: 'Configuring your app icon'
   提示: ''
-  翻译: ''
+  翻译: '配置应用图标'
 - 内容: 'Add app icon variations to represent your app in places such as Settings, search results, and the App Store.'
   提示: ''
-  翻译: ''
+  翻译: '添加应用图标变体，以便在设置、搜索结果和 App Store 等位置显示你的应用。'
 - 内容: 'Overview'
   提示: ''
-  翻译: ''
-- 内容: 'Every app has a distinct app icon that communicates the app’s purpose and makes it easy to recognize throughout the system. Apps require multiple variations of the app icon to look great in different contexts. Xcode can help generate these variations for you using a single high-resolution image, or you can configure your app icon variations by using an app icon’s image set in your project’s asset catalog. visionOS and tvOS app icons are made up of multiple stacked image layers you configure in your project’s asset catalog.'
+  翻译: '概述'
+- 内容: 'Every app has a distinct app icon that communicates the app’s purpose and makes it easy to recognize throughout the system. Apps require multiple variations of the app icon to look great in different contexts. Xcode can help generate these variations for you using a single high-resolution image, or you can configure your app icon variations by using an app icon’s image set in your project’s asset catalog. visionOS and tvOS app icons are made up of multiple stacked image layers you configure in your project’s asset catalog. iOS and iPadOS app icons support additional dark and tinted styles.'
   提示: ''
-  翻译: ''
+  翻译: '每个应用都有一个独特的应用图标，它可以传达应用的用途，并使其在整个系统中易于识别。应用需要多种图标的变体，以便在不同的上下文中看起来更美观。Xcode 可以使用单张高分辨率图片帮助你生成这些变体，你也可以使用项目资源目录中的应用图标的图片集来配置变体。visionOS 和 tvOS 应用图标由你在项目资源目录中配置的多个图像图层堆叠而成。iOS 和 iPadOS 应用图标额外支持深色和着色样式。'
+- 内容: 'For design guidance on app icons, see Human Interface Guidelines > App icons.'
+  提示: ''
+  翻译: '有关应用图标的设计指南，请参阅人机界面指南 > 应用图标。'
 - 内容: 'Create an app icon'
   提示: ''
-  翻译: ''
+  翻译: '创建应用图标'
 - 内容: 'When you create your project from a template, it automatically includes a default asset catalog (Assets.xcassets) that contains the AppIcon. If you don’t have a default asset catalog or existing AppIcon or you want to provide an alternate, you can add an app icon to an asset catalog manually:'
   提示: ''
-  翻译: ''
+  翻译: '从模板创建项目时，项目会自动包含一个包含 AppIcon 的默认资源目录 (Assets.xcassets)。如果没有默认资源目录或 AppIcon 资源，或者你想提供一个备用资源，可以手动将应用图标添加到资源目录中：'
 - 内容: 'In the Project navigator, select an asset catalog.'
   提示: ''
-  翻译: ''
+  翻译: '在项目导航器中，选择一个资源目录。'
 - 内容: 'Click the Add button (+) at the bottom of the outline view.'
   提示: ''
-  翻译: ''
+  翻译: '单击大纲视图底部的添加按钮 (+)。'
 - 内容: 'In the pop-up menu, choose OS variant > OS variant App Icon. Xcode creates a new app icon set or image stack with the name AppIcon.'
   提示: ''
-  翻译: ''
+  翻译: '在弹出菜单中，选择 OS variant > OS variant App Icon。Xcode 会创建一个新的名为 AppIcon的应用图标集或图像堆栈。'
 - 内容: 'Specify app icon variations'
   提示: ''
-  翻译: ''
+  翻译: '指定应用图标变体'
 - 内容: 'Variations of your app icon appear throughout the system in places like the Home View, Settings, and search results. In Xcode 14 and later, for iOS, macOS or watchOS apps, you can generate all variations of your icon using a single 1024×1024 pixel image or provide variations for all sizes. Although using a single size is the default behavior for new apps or new icons in the asset catalog, you might need all sizes in order to include detail in larger variants and simplify as app size decreases. If you have an existing project that provides multiple variants, consider providing a single size when that is all your icon requires.'
   提示: ''
-  翻译: ''
+  翻译: '应用图标的变体会出现在整个系统中的主视图、设置和搜索结果等位置。在 Xcode 14 及更高版本中，对于 iOS、macOS 或 watchOS 应用，你可以使用一张 1024×1024 像素的图像生成图标的所有变体，也可以手动提供所有所需尺寸的变体。虽然使用单一尺寸是资源目录中新应用或新图标的默认行为，但你可能需要所有尺寸的图标以便在较大的变体中包含细节，并在应用尺寸减小时进行简化。如果你有一个提供多种变体的现有项目，当应用只需要单一尺寸的图标时，请考虑提供单一尺寸。'
 - 内容: 'For each platform your app supports, choose between using a single size and providing all sizes in the Asset Catalog:'
   提示: ''
-  翻译: ''
+  翻译: '对于应用支持的每个平台，请在使用单一尺寸和在资源目录中提供所有尺寸之间做出选择：'
 - 内容: 'In the Project navigator, select an asset catalog.'
   提示: ''
-  翻译: ''
+  翻译: '在项目导航器中，选择资源目录。'
 - 内容: 'In the Asset Catalog, select the icon.'
   提示: ''
-  翻译: ''
+  翻译: '在资源目录中，选择图标。'
 - 内容: 'To view and edit attributes, select Inspectors > Attributes from Xcode’s View menu.'
   提示: ''
-  翻译: ''
+  翻译: '要查看和编辑属性，请从 Xcode 的 View 菜单中选择 Inspectors > Attributes。'
 - 内容: 'Select Single Size or All Sizes from the pop-up menu for the platform you want to change.'
   提示: ''
-  翻译: ''
+  翻译: '从要更改的平台的弹出菜单中选择 Single Size 或 All Sizes。'
 - 内容: 'For each platform your app supports, add a single image that Xcode can use to generate your icon variations, or add an image for each icon variation of an icon set in the Asset Catalog:'
   提示: ''
-  翻译: ''
+  翻译: '对于应用支持的每个平台，添加一张 Xcode 可以用来生成图标变体的图片，或者为资源目录中图标集的每个图标变体添加一张图片：'
 - 内容: 'In the Project navigator, select an asset catalog.'
   提示: ''
-  翻译: ''
+  翻译: '在项目导航器中，选择资源目录。'
 - 内容: 'In the Asset Catalog, select the icon.'
   提示: ''
-  翻译: ''
+  翻译: '在资源目录中，选择图标。'
 - 内容: 'From the Finder, drag image variations of the app icon to the image wells in the detail area of the Asset Catalog in Xcode that match their resolutions and use cases. visionOS and tvOS app icons combine a stack of multiple image layers to create a sense of depth. For tvOS apps, the asset catalog contains an App Icon & Top Shelf Image folder with the different app icon and launch image sets.'
   提示: ''
-  翻译: ''
-- 内容: 'For general design guidance, see App icons. For platform-specific design guidance:'
+  翻译: '从 Finder 中，将应用图标的图像变体拖动到 Xcode 中资源目录细节区域的图像井中，这些图像应与其分辨率和使用情况相匹配。visionOS 和 tvOS 应用图标将多个图像图层组合在一起，营造出深度感。对于 tvOS 应用，资源目录包含一个应用图标和顶层图片文件夹，其中包含不同的应用图标和启动图片集。'
+- 内容: 'Add dark and tinted icon variants to iOS and iPadOS'
   提示: ''
-  翻译: ''
-- 内容: 'visionOS'
+  翻译: '为 iOS 和 iPadOS 添加深色和着色图标变体'
+- 内容: 'iOS and iPadOS support three stylistic variations for app icons: Light, Dark, and Tinted. You can create your own variations to ensure that each one looks exactly the way you way you want.'
   提示: ''
-  翻译: ''
-- 内容: 'iOS'
+  翻译: 'iOS 和 iPadOS 支持三种不同风格的应用图标：浅色（Light）、深色（Dark）和着色（Tinted）。你可以创建自己的变体，以确保每个变体看起来都符合你的要求。'
+- 内容: 'To add these icon variations to your app:'
   提示: ''
-  翻译: ''
-- 内容: 'macOS'
+  翻译: '要在应用中添加这些图标变体，请执行以下操作：'
+- 内容: 'In the Project navigator, select an asset catalog.'
   提示: ''
-  翻译: ''
-- 内容: 'tvOS'
+  翻译: '在项目导航器中，选择资源目录。'
+- 内容: 'In the Asset Catalog, select the icon.'
   提示: ''
-  翻译: ''
-- 内容: 'watchOS'
+  翻译: '在资源目录中，选择图标。'
+- 内容: 'Select View > Inspectors > Attributes from the Xcode menu.'
   提示: ''
-  翻译: ''
+  翻译: '从 Xcode 菜单中选择 View > Inspectors > Attributes。'
+- 内容: 'Select Single Size from the iOS pop-up menu.'
+  提示: ''
+  翻译: '从 iOS 弹出菜单中选择 Single Size。'
+- 内容: 'Then select Any, Dark, or Tinted from the Appearance pop-up menu.'
+  提示: ''
+  翻译: '然后从 Appearance 弹出菜单中选择“任意（Any）”、“深色（Dark）”或“着色（Tinted）”。'
+- 内容: 'After you select the Appearance from the pop-up menu, two image wells appear. Drag your dark and tinted app icons into the appropriate image well. Provide your tinted app icon as a grayscale image. Provide your dark app icon with a transparent background so the system-provided background can show through.'
+  提示: ''
+  翻译: '从弹出菜单中选择外观后，会出现两个图像井。将深色和着色应用图标拖入相应的图像井中。请为着色应用图标提供灰度图像。为深色应用图标提供透明背景，以便系统提供的背景可以显示出来。'
+- 内容: 'If you prefer, you can take advantage of the system’s automatically generated treatment that is applied to all app icons. It is crafted intelligently to preserve design intent and maintain legibility. This also helps maintain a consistent visual experience across the Home Screen.'
+  提示: ''
+  翻译: '如果你愿意，可以利用系统自动生成的处理方法，该方法适用于所有应用图标。它采用智能设计，以保持设计意图和可读性。这也有助于在整个主屏幕上保持一致的视觉体验。'
+- 内容: 'For design guidance specific to iOS and iPadOS, see Human Interface Guidelines > App Icons.'
+  提示: ''
+  翻译: '有关 iOS 和 iPadOS 的设计指南，请参阅人机界面指南 > 应用图标。'
 - 内容: 'Configure the layers of an image stack'
   提示: ''
-  翻译: ''
+  翻译: '配置图像堆栈的图层'
 - 内容: 'By default, visionOS and tvOS app icons are constructed with three layers. This is the maximum number of layers visionOS icons support but you can use up to five layers when constructing tvOS icons. To add a layer, Click the Add button (+), choose OS variant > OS variant App Icon Layer. To remove a layer, select the layer and click the Remove button (-).'
   提示: ''
-  翻译: ''
+  翻译: '默认情况下，visionOS 和 tvOS 应用图标由三层构成。这是 visionOS 图标支持的最大图层数，但在构建 tvOS 图标时最多可使用五个图层。要添加图层，请单击添加按钮 (+)，选择 OS variant > OS variant App Icon Layer。要移除图层，请选择图层并单击移除按钮 (-)。'
 - 内容: 'Add images to each layer by dragging them from the Finder into the image wells in the detail area of the Asset Catalog in Xcode. For information on the use of layers, see App icons visionOS and tvOS.'
   提示: ''
-  翻译: ''
+  翻译: '通过将图像从 Finder 拖动到 Xcode 中资源目录详细区域的图像井中，将图像添加到各层。有关图层使用的信息，请参阅应用图标 visionOS 和 tvOS。'
 - 内容: 'Note'
   提示: ''
-  翻译: ''
+  翻译: '注意'
 - 内容: 'You can use Parallax Previewer app or Parallax Exporter plug-in to create and preview Layer Source Representation (.lsr and .xlsr) files that you can import into your Asset Catalog in Xcode. Save your file in the LSR file format to import a tvOS icon into Xcode, and save in the XLSR file format to import a visionOS icon. Download these from the Apple Design Resources site.'
   提示: ''
-  翻译: ''
+  翻译: '你可以使用 Parallax Previewer 应用或 Parallax Exporter 插件来创建和预览图层源表示（Layer Source Representation）文件（.lsr 和 .xlsr），并将其导入 Xcode 中的资源目录。如果要将 tvOS 图标导入 Xcode，请将文件保存为 LSR 文件格式；如果要将 visionOS 图标导入 Xcode，请将文件保存为 XLSR 文件格式。请从 Apple Design Resources 网站下载这些文件。'
 - 内容: 'Specify an App Store icon'
   提示: ''
-  翻译: ''
+  翻译: '指定 App Store 图标'
 - 内容: 'If you distribute your app through the App Store, you must provide app icon imagery to use in the App Store. In the Project navigator, select an asset catalog and add icon images to the appropriate image wells in an app icon set or image stack. The App Store image well location varies by platform.'
   提示: ''
-  翻译: ''
+  翻译: '如果通过 App Store 发布应用，则必须提供在 App Store 中使用的应用图标图像。在项目导航器中，选择一个资源目录，然后将图标图像添加到应用图标集或图像堆栈中相应的图像井中。App Store 图像井的位置因平台而异。'
 - 内容: 'Platform'
   提示: ''
-  翻译: ''
+  翻译: '平台'
 - 内容: 'App Store icon location'
   提示: ''
-  翻译: ''
+  翻译: 'App Store 图标位置'
 - 内容: 'iOS'
   提示: ''
-  翻译: ''
+  翻译: 'iOS'
 - 内容: 'Drag an icon image to the iOS 1,024pt image well.'
   提示: ''
-  翻译: ''
+  翻译: '将图标图像拖到 iOS 1,024pt 图像井中。'
 - 内容: 'iMessage'
   提示: ''
-  翻译: ''
+  翻译: 'iMessage'
 - 内容: 'For the iOS target, drag an icon image to the iOS 1,024pt image well in the AppIcon set. For the iMessage Extension target, drag an icon to the Messages App Store image well in the iMessage App Icon set.'
   提示: ''
-  翻译: ''
+  翻译: '对于 iOS 目标，将图标图像拖至 AppIcon 集的 iOS 1,024pt 图像井。对于 iMessage 扩展目标，将图标拖动到 iMessage App Icon 集中的 Messages App Store 图像井中。'
 - 内容: 'Sticker Pack'
   提示: ''
-  翻译: ''
+  翻译: 'Sticker Pack'
 - 内容: 'Drag an icon image to the iOS 1,024pt image well and the Messages App Store image well.'
   提示: ''
-  翻译: ''
+  翻译: '将图标图像拖动到 iOS 1,024pt 图像井和 Messages App Store 图像井。'
 - 内容: 'macOS'
   提示: ''
-  翻译: ''
+  翻译: 'macOS'
 - 内容: 'Drag an icon image to the App Store - 2x image well.'
   提示: ''
-  翻译: ''
+  翻译: '拖动图标图像到 App Store - 2x 图像井。'
 - 内容: 'tvOS'
   提示: ''
-  翻译: ''
+  翻译: 'tvOS'
 - 内容: 'Drag images to the image wells for the layers of your App Icon - App Store stack in the App Icon & Top Shelf Image folder. The App Store generates an icon from the layers of the image stack.'
   提示: ''
-  翻译: ''
+  翻译: '在 App Icon & Top Shelf Image 文件夹中，将图像拖动到 App Icon - App Store 堆栈图层的图像井。App Store 会根据图像堆栈的图层生成图标。'
 - 内容: 'visionOS'
   提示: ''
-  翻译: ''
+  翻译: 'visionOS'
 - 内容: 'Drag images to the image wells for the layers of your visionOS App Icon stack. The App Store generates an icon from the layers of the image stack.'
   提示: ''
-  翻译: ''
+  翻译: '将图片拖动到 visionOS 应用图标堆栈图层的图像井中。App Store 会根据图片层生成图标。'
 - 内容: 'watchOS'
   提示: ''
-  翻译: ''
+  翻译: 'watchOS'
 - 内容: 'For the iOS target, drag an icon image to the iOS 1,024pt image well. For the WatchKit App target, drag an icon image to the watchOS image well.'
   提示: ''
-  翻译: ''
+  翻译: '对于 iOS 目标，将图标图像拖到 iOS 1,024pt 图像井中。对于 WatchKit App 目标，将图标图像拖至 watchOS 图像井。'
 - 内容: 'Change the default app icon set'
   提示: ''
-  翻译: ''
+  翻译: '更改默认应用图标集'
 - 内容: 'If you don’t create your project from a template, or you want to change your default app icon set, specify which one to use in your target’s build settings.'
   提示: ''
-  翻译: ''
+  翻译: '如果不从模板创建项目，或者想更改默认的应用图标集，请在目标的构建设置中指定使用哪个图标集。'
 - 内容: 'In the Project navigator, select the project and in the project editor, select the target.'
   提示: ''
-  翻译: ''
+  翻译: '在项目导航器中选择项目，然后在项目编辑器中选择目标。'
 - 内容: 'In the App Icons and Launch Images section of the General pane, choose the app icon set from the App Icons Source pop-up menu.'
   提示: ''
-  翻译: ''
+  翻译: '在 General 窗格的 App Icons 和 Launch Images 部分，从应用图标源弹出菜单中选择应用图标集。'
 - 内容: 'If you don’t select the Include all app icon assets option, Xcode only includes the app icon set you specify in the App Icons Source pop-up menu when it builds your app. You might leave this option unselected if you want to use a different icon for the Debug and Release builds of your app without including the Debug icon in your Release app bundle. You can specialize the app icon for the Debug and Release configurations by modifying the Primary App Icon Set Name build setting in the Build Settings tab.'
   提示: ''
-  翻译: ''
+  翻译: '如果不选择“包含所有应用图标资源”选项，Xcode 在构建应用时只会包含你在应用图标源弹出菜单中指定的应用图标集。如果你想在应用的调试和发布版本中使用不同的图标，且不在发布捆绑包中包含调试图标，则可以取消选中此选项。你可以通过修改 Build Settings 选项卡中的 App Icon Set Name 构建设置，为调试和发布配置专用的应用图标。'
 - 内容: 'Xcode also includes any additional app icon sets you specify under the Alternate App Icon Sets build setting. Include any icon sets your app can select using setAlternateIconName(_:completionHandler:) or use in App Store product pages.'
   提示: ''
-  翻译: ''
+  翻译: 'Xcode 还会包含你在 Alternate App Icon Sets 构建设置下指定的任何其他应用图标集。包括你的应用可以通过 setAlternateIconName(_:completionHandler:) 选择或在 App Store 产品页面中使用的所有图标集。'
 - 内容: 'For information on configuring tests that use icons in App Store Connect, see Product Page Optimization.'
   提示: ''
-  翻译: ''
+  翻译: '有关在 App Store Connect 中配置使用图标测试的信息，请参阅产品页面优化。'
